tests/ui/mem_forget.stderr
error: usage of mem::forget on Drop type
  --> $DIR/mem_forget.rs:18:5
   |
18 |     memstuff::forget(six);
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/mem_forget.rs:11:8
   |
11 | #[deny(mem_forget)]
   |        ^^^^^^^^^^

error: usage of mem::forget on Drop type
  --> $DIR/mem_forget.rs:21:5
   |
21 |     std::mem::forget(seven);
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: usage of mem::forget on Drop type
  --> $DIR/mem_forget.rs:24:5
   |
24 |     forgetSomething(eight);
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

